--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/dotenv": "4.1.*",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
+        "symfony/var-dumper": "4.1.*",
         "symfony/web-server-bundle": "4.1.*"
     },
     "config": {
